--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^5.0.0",
     "forever": "^4.0.3",
     "forever-monitor": "^3.0.3",
     "koa": "^2.15.2",
